force-app/main/default/objects/npe01__Contacts_And_Orgs_Settings__c/fields/Advancement_Namespace__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Namespace__c</fullName>
    <defaultValue>&quot;gem&quot;</defaultValue>
    <description>For system use only: Namespace for cross package functionality.</description>
    <inlineHelpText>For system use only: Namespace for cross package functionality.</inlineHelpText>
    <label>GEM Namespace</label>
    <length>10</length>
    <type>Text</type>
</CustomField>