force-app/main/default/objects/npe01__Contacts_And_Orgs_Settings__c/fields/Automatic_Campaign_Member_Management__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Campaign_Member_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically creates a Campaign Member when you create an Opportunity that has a Primary Contact and a Primary Campaign source associated with it, or update that Opportunity with a Closed/Won stage.</description>
    <inlineHelpText>When selected, NPSP automatically creates a Campaign Member record when you create an Opportunity that has a Primary Contact and a Primary Campaign Source, or when you update that Opportunity to a Closed/Won stage.</inlineHelpText>
    <label>Automatic Campaign Member Management</label>
    <type>Checkbox</type>
</CustomField>