force-app/main/default/objects/npe01__Contacts_And_Orgs_Settings__c/fields/Campaign_Member_Non_Responded_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Non_Responded_Status__c</fullName>
    <description>The automatic Status of a Campaign Member for Open or Closed/Lost opportunities that have a Primary Contact and a Primary Campaign Source associated with them. If left blank, Salesforce uses the first non-Responded status.</description>
    <inlineHelpText>The default status you want NPSP to use on Campaign Members for Open or Closed/Lost Opportunities that have a Primary Contact and a Primary Campaign Source associated with them. If you leave this blank, NPSP uses the first non-Responded status.</inlineHelpText>
    <label>Campaign Member Non Responded Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>