force-app/main/default/objects/npe01__Contacts_And_Orgs_Settings__c/fields/Contact_Role_for_Organizational_Opps__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_for_Organizational_Opps__c</fullName>
    <description>The default Contact Role automatically assigned to the Opportunity&apos;s Primary Contact when the Opportunity&apos;s Account is NOT a Household, One-to-One, or Individual Account.</description>
    <inlineHelpText>The default Contact Role automatically assigned to the Opportunity&apos;s Primary Contact when the Opportunity&apos;s Account is NOT a Household, One-to-One, or Individual Account.</inlineHelpText>
    <label>Contact Role for Organizational Opps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>