force-app/main/default/objects/npe01__Contacts_And_Orgs_Settings__c/fields/Enforce_Accounting_Data_Consistency__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Accounting_Data_Consistency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables rules and automation that enforce consistency in accounting data.</description>
    <inlineHelpText>Enables multiple rules and automations on payments and opportunities to ensure that accounting data is complete and consistent.</inlineHelpText>
    <label>Enforce Accounting Data Consistency</label>
    <type>Checkbox</type>
</CustomField>