force-app/main/default/objects/npe01__Contacts_And_Orgs_Settings__c/fields/Honoree_Opportunity_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Honoree_Opportunity_Contact_Role__c</fullName>
    <description>Populating this setting will automatically create a Contact Role for Opportunities with an honoree Contact. Leaving this field blank will disable automatic Contact Role creation for the honoree.</description>
    <inlineHelpText>If you populate this setting, NPSP automatically creates a Contact Role record for Opportunities with an Honoree Contact.</inlineHelpText>
    <label>Honoree Opportunity Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>