force-app/main/default/objects/npe01__Contacts_And_Orgs_Settings__c/fields/Max_Payments__c.field-meta.xml
<CustomField>
    <fullName>Max_Payments__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Determines the maximum number of payments available in the Payment Creation Wizard.</description>
    <inlineHelpText>Determines the maximum number of Payments allowed when scheduling Payments for an Opportunity.</inlineHelpText>
    <label>Max Payments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>