force-app/main/default/objects/npe01__Contacts_And_Orgs_Settings__c/fields/Notification_Recipient_Opp_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Notification_Recipient_Opp_Contact_Role__c</fullName>
    <description>Populating this setting will automatically create a Contact Role for Opportunities with a notification recipient Contact. Leaving this field blank will disable automatic Contact Role creation for the notification recipient.</description>
    <inlineHelpText>If you populate this setting, NPSP automatically creates a Contact Role record for Opportunities with a notification recipient Contact.</inlineHelpText>
    <label>Notification Recipient Opp Contact Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>