force-app/main/default/objects/npe01__Contacts_And_Orgs_Settings__c/fields/Opp_Types_Excluded_for_Payments__c.field-meta.xml
<CustomField>
    <fullName>Opp_Types_Excluded_for_Payments__c</fullName>
    <description>Salesforce won&apos;t automatically create Payments for Opportunities that have this value in the Type picklist.</description>
    <inlineHelpText>NPSP automatically creates Payment records for Opportunities with any value in the Type picklist. Select any Types here that you don&apos;t want Payment records automatically created for. Control or Command click to select more than one Type.</inlineHelpText>
    <label>Excluded Opp Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>