force-app/main/default/objects/npe01__Contacts_And_Orgs_Settings__c/fields/Payments_Auto_Close_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Payments_Auto_Close_Stage_Name__c</fullName>
    <description>Salesforce automatically sets an Opportunity&apos;s Stage to this value when the Payment Amount Received is equal to the Opportunity Amount. If no stage is selected, the Opportunity Stage won&apos;t change when payments are complete.</description>
    <inlineHelpText>NPSP automatically sets an Opportunity&apos;s stage to this value when the Payment Amount Received is equal to the Opportunity Amount. If no stage is selected, the Opportunity Stage won&apos;t change when payments are complete.</inlineHelpText>
    <label>Opportunity Stage for When Fully Paid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>